Fixed a big in the header tab

--- a/Ecommerce product page/src/components/header/header.css
+++ b/Ecommerce product page/src/components/header/header.css
@@ -14,6 +14,10 @@
     justify-content: space-between;
 }
 
+.tab-C ul{
+    flex-direction: row;
+}
+
 li{
     cursor: pointer;
     margin: 0 0.2rem;
