--- a/Ecommerce product page/src/components/body/body.css
+++ b/Ecommerce product page/src/components/body/body.css
@@ -8,11 +8,23 @@
     padding: 4rem;
     flex-direction: column;
     width: 50%;
-    gap: 2rem;
+    }
 
+.wrap-P img {
+    width: 100%;
+    height: 60%;
+    border-radius: 0.4rem;
 }
-.wrapper ul{
+
+.thumbP {
+    margin: 2rem 0 0 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
+    width: 100%;
+}
+
+.thumbP li{
+    width: 3.5rem;
+    padding: 0;
 }
