--- a/Ecommerce product page/src/components/body/body.css
+++ b/Ecommerce product page/src/components/body/body.css
@@ -1,11 +1,12 @@
-.wrapperb{
+.wrapperB{
     display: flex;
+    justify-content: center;
     margin: 2rem;
 }
 
 
 .wrap-P{
-    padding: 4rem;
+    padding: 4rem 2rem;
     flex-direction: column;
     width: 50%;
     }
@@ -27,4 +28,18 @@
 .thumbP li{
     width: 3.5rem;
     padding: 0;
+}
+
+.textW{
+    padding: 4rem 2rem;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+
+button{
+    padding: 0.5rem;
+    border-radius: 0.4rem;
 }
