Finish the CSS of the main page

--- a/Ecommerce product page/src/components/body/body.css
+++ b/Ecommerce product page/src/components/body/body.css
@@ -40,6 +40,26 @@
     gap: 2rem;
 }
 
+.priceD{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.priceD label{
+    font-weight: bold;
+    color: hsl(26, 100%, 55%);
+    border-radius: 0.2rem;
+    padding: 0.2rem;
+    background-color: hsl(25, 100%, 94%);
+}
+
+.oldPrice{
+    text-decoration: line-through;
+    color: rgba(0, 0, 0, 0.294);
+    font-weight: bold;
+}
+
 .lastButtons{
     display: flex;
     flex-direction: row;
@@ -55,7 +75,8 @@ button{
 }
 
 /* Texts */
-h6 {
+h5 {
+    font-weight: bold;
     color: hsl(26, 100%, 55%);
 }
 
@@ -68,17 +89,43 @@ h6 {
     width: 50%;
 }
 
+
+.numB button{
+    font-weight: bolder;
+    color: hsl(26, 100%, 55%);
+    border: none;
+    border-radius: 0.2rem;
+    padding: 1rem;
+    background-color: hsl(223, 64%, 98%)
+}
+
+.numB label {
+    font-weight: bold;
+    color: black;
+    border-radius: 0.2rem;
+    padding: 1rem;
+    background-color: hsl(223, 64%, 98%)
+}
+
 .addToCart button{
     background-color: hsl(26, 100%, 55%);
     color: white;
+    padding: 1rem;
+    border: none;
+    border-radius: 0.4rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1.5rem;
+    align-items: center;
+    font: bold;
 }
 
 .addToCart button:hover{
-    background-color: hsl(25, 100%, 94%);
+    background-color: hsla(26, 100%, 55%, 0.529);
 }
 
-.numB button{
-    color: hsl(26, 100%, 55%);
+.addToCart button img {
+    color: none;
 }
-
-
