--- a/Ecommerce product page/src/components/cart/cart.css
+++ b/Ecommerce product page/src/components/cart/cart.css
@@ -1,8 +1,19 @@
 .cartWrapper{
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    gap: 1.2rem;
+    width: 15rem;
+}
+
+.cartB{
     display: flex;
     flex-direction: row;
 }
 
 .cartImg{
-    
+    width: 2rem;
+    height: 2rem;
+    border-radius: 0.2rem;
 }
