--- a/Ecommerce product page/src/components/header/header.css
+++ b/Ecommerce product page/src/components/header/header.css
@@ -62,13 +62,18 @@ li:hover{
         position: absolute;
         display: block;
         flex-direction: column;
-        background-color: aqua;
+        background-color:
+        linear-gradient( to right,
+        rgb(255, 255, 255) 0%,
+        rgb(255, 255, 255) 60%,
+        rgba(0, 0, 0, 0.7) 6%,
+        rgba(0, 0, 0, 0.7) 100%);;
         z-index: 4;
         top: 0rem;
         left: 0rem;
-        width: 40%;
+        width: 100%;
         height: 100%;
-        padding: 8rem 0 0 2rem;
+        padding: 8rem 0 4rem 2rem;
     }
 
 
