--- a/Ecommerce product page/src/components/body/body.css
+++ b/Ecommerce product page/src/components/body/body.css
@@ -2,8 +2,12 @@
     display: flex;
     justify-content: center;
     margin: 2rem;
+
 }
 
+.modalW{
+    display: none;
+}
 
 .wrap-P{
     margin: 0 6rem;
@@ -139,6 +143,7 @@ h5 {
         flex-direction: column;
     }
     .wrap-P{
+        position: relative;
         margin: 0;
         padding: 0;
         display: flex;
@@ -150,6 +155,10 @@ h5 {
     .wrap-P img{
         width: 100%;
         border-radius: 0rem;
+    }
+    .modalW{
+        position: absolute;
+        display: flex;
     }
 
     .textW{
